# Quadson

./: .gitignore  CAN_MotorControl.py  CMakeLists.txt  Dockerfile  Dockerfile.emu  Dockerfile.ros  Dockerfile.sim  Makefile  README.md  quadtest.py
config/: .zshrc  Dockerfile.emu  Dockerfile.ros  Dockerfile.sim  setup-zsh.sh
docs/: kinematics.ipynb
docs/assets/: rl_agent_block_diagram  rl_agent_block_diagram.txt.drawio
docs/progress/: monthly_todo.md  progress_log_format.md  week1.md  week2.md
docs/thesis/: thesis_outline.md
docs/thesis/summary/: summary.tex
docs/thesis/sumup_before/: sumup_before.tex
dotfiles/: entrypoint.sh
python_scripts/: CAN_MotorControl.py  sim.py  train.py
python_scripts/config/: joint_names_quadbot.yaml
python_scripts/meshes/: Empty_Link.STL  FR_1_link.STL  FR_2_link.STL  FR_3_link.STL  FR_4_link.STL  FR_link.STL  base_link.STL  fr_link_1.STL
python_scripts/urdf/: quadbot.csv  quadbot.urdf
quadson/: CMakeLists.txt  Makefile  start_can.sh
quadson-sim/: add_collision.py  kinematics.ipynb  load.py
quadson-sim/meshes/: base_link.STL  fr_link_0.STL  fr_link_2.STL
quadson-sim/meshes/dae/: base_link.001.dae  base_link.004.dae  base_link.dae  bl_link0.dae  bl_link1.dae  bl_link2.dae  bl_link3.dae  bl_link4.dae  br_link0.dae  br_link1.dae  br_link2.dae  br_link3.dae  br_link4.dae  fl_link0.dae  fl_link1.dae  fl_link2.dae  fl_link3.dae  fl_link4.dae  fr_link0.dae  fr_link1.dae  fr_link2.dae  fr_link3.dae  fr_link4.dae  fr_link_0.009.dae  fr_link_0.010.dae  fr_link_0.dae  fr_link_1.008.dae  fr_link_1.010.dae  fr_link_2.010.dae  fr_link_3.009.dae  link4.009.dae  link4.010.dae  link4.dae
quadson-sim/src/: leg.py
quadson-sim/urdf/: plane.urdf  quadbot.csv  quadbot.urdf  quadson.urdf  quadson_modified.urdf
quadson/include/: AHRS.hpp  actuator.h  can_protocol.h  leg_group.h  quadson.h  utility.h
quadson/source/: CMakeLists.txt  actuator.cpp  leg_group.cpp  main.cpp  quadson.cpp
quadson_bullet/assets/meshes/dae/: base_link.dae  bl_link0.dae  bl_link1.dae  bl_link2.dae  bl_link3.dae  bl_link4.dae  br_link0.dae  br_link1.dae  br_link2.dae  br_link3.dae  br_link4.dae  fl_link0.dae  fl_link1.dae  fl_link2.dae  fl_link3.dae  fl_link4.dae  fr_link0.dae  fr_link1.002.dae  fr_link1.dae  fr_link2.002.dae  fr_link2.dae  fr_link3.002.dae  fr_link3.dae  fr_link4.dae  fr_link_0.011.dae  fr_link_0.012.dae  fr_link_1.009.dae  fr_link_1.dae  fr_link_2.008.dae  fr_link_2.009.dae  fr_link_2.dae  fr_link_3.008.dae  fr_link_3.010.dae  fr_link_3.dae  fr_llink4.002.dae  fr_llink4.dae  link4.008.dae
quadson_bullet/assets/meshes/stl/: base_link.STL  base_link.stl  bl_link2.stl  br_link0.stl  br_link1.stl  fl_link1.stl  fl_link2.stl  fl_link4.stl  fr_link0.stl  (+3 more)
quadson_bullet/assets/urdf/: quadson.urdf  quadson_modified.urdf
quadson_bullet/scripts/: urdf_add_collision.py
quadson_bullet/src/: sim_setup.py
quadson_cpp/include/: can_interface.h
quadson_cpp/source/: leg_group.cpp
quadson_hybrid/: quad_calc_test.py
quadson_pi/include/: quadson.h
quadson_pi/source/: AHRS.cpp
quadson_pi_core/include/: leg_group.h
quadson_py/: requirements.txt
quadson_py/scripts/: analyze_stability.py  body_inv.py  single_leg.py  test_gait.py  test_trained.py  train_ppo.py
quadson_py/src/: interface.py
quadson_py/src/real/: CAN_MotorControl.py  can_interface.py  can_message.py  leg_group.py  leg_tmp.py  motor.py  motor_manager.py
quadson_py/src/sim/: interface.py  leg_group.py  quadson.py  quadson_env.py
quadson_ros/src/qd_description/: CMakeLists.txt  package.xml
quadson_ros/src/qd_description/launch/: quadson.launch
quadson_sim/assets/urdf/: quadson.urdf  quadson_modified.urdf
quadson_sim/notebook/: body_inverse.ipynb
quadson_sim/scripts/: body_inv.py  process_urdf.py  single_leg.py  test_gait.py  train_ppo.py  urdf_add_collision.py
quadson_sim/src/: actuator.py  body_kinematics.py  config.py  gait.py  interface.py  leg_group.py  leg_kinematics.py  locomotion.py  quadson.py  quadson_env.py  sim_setup.py
source/: CMakeLists.txt  can_interface.cpp  leg_group.cpp  quadson.cpp
(+61 files in other folders)
